Support Java 8 + fixes